--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,9 @@
     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">About</a>
     <a href="/links/" class="gray no-underline inline-block mx2 mt1 md:mt0">Links</a>
 </div>
+<div class="text-center">
+    <a href="mailto:mail@elham@ro.ru" class="gray no-underline inline-block mx2 mt1 md:mt0">Text me</a>
+</div>
 <br />
 <br />
 <!--<div class="footer">Подвал сайта</div> -->
