Отредактирована страница обо мне - исправлен баг в футере страниц и добавлены логотипы технологий

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,7 +19,19 @@
 .logos {
     vertical-align: middle;
 }
-
+/*==Для логотипов==*/
+.tech_logos{
+    display: flex; 
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.tech_logos img {
+    width: 34px;
+    max-width: 20px;
+    height: auto;
+    margin: 20px;
+}
 a,
 abbr,
 acronym,
