--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,4 +11,8 @@
 </div>
 <br />
 <br />
+<!--========== Кнопка наверх ==========-->
+<a href="#" class="scrollup" id="scroll-up">
+    <i class="ri-arrow-drop-up-line"></i>
+ </a>
 <!--<div class="footer">Подвал сайта</div> -->
