--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -320,6 +320,29 @@ h6 {
 .ultrabold {
     font-weight: 900;
 }
+/*=============== Кнопка наверх ===============*/
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: -50%;
+    background-color: black;
+    color: gray;
+    box-shadow: 0px 0px 10px 3px rgba(254, 254, 254, 0.2);
+    display: inline-flex;
+    padding: 6px;
+    font-size: 1.25rem;
+    transition: bottom .4s, transform .4s;
+    border-radius: 12px;
+  }
+  
+  .scrollup:hover {
+    transform: translateY(-.5rem);
+  }
+  
+  /* Показать кнопку наверх */
+  .show-scroll {
+    bottom: 3rem;
+  }
 .m1 {
     margin: 8px;
 }
